src/widgets/Property/Property.module.scss
@import "@var";
@import "@classes";

.property {
  margin-top: 156px;
  &Body {
    display: flex;
    gap: 20px;
  }
  &Content {
    flex: 1 1 50%;
  }
  &Image {
    flex: 1 1 50%;
    position: relative;
    padding: 0 0 30% 0;

    img {
      width: 100%;
      height: 100%;
      object-fit: cover;
      position: absolute;
      top: 0;
      left: 0;
      border-radius: 5px;
    }
  }
}
.textBlock {
  &Title {
    margin-bottom: 10px;
  }
  &Description {
    margin-bottom: 25px;
    height: 100%;
    max-height: 365px;
    overflow: hidden;
  }
}

